gen/NNGraphParser.py
# Generated from NNGraph.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class NNGraphParser ( Parser ):

    grammarFileName = "NNGraph.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "':'", "'('", "')'", "','", 
                     "'='", "'['", "']'", "'model'", "'graph'", "'config'", 
                     "'node'", "'edge'", "'input'", "'output'", "'tensor'", 
                     "'label'", "'None'", "<INVALID>", "'->'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "MODEL", "GRAPH", "CONFIG", 
                      "NODE", "EDGE", "INPUT", "OUTPUT", "TENSOR", "LABEL", 
                      "NONE", "BOOL_LITERAL", "ARROW", "FLOAT_LITERAL", 
                      "INT_LITERAL", "STRING", "ID", "WS", "NEWLINE", "LINE_COMMENT", 
                      "BLOCK_COMMENT" ]

    RULE_start = 0
    RULE_model_block = 1
    RULE_input_decl = 2
    RULE_output_decl = 3
    RULE_graph_block = 4
    RULE_node_decl = 5
    RULE_layer_expr = 6
    RULE_param_list = 7
    RULE_param = 8
    RULE_edge_decl = 9
    RULE_config_block = 10
    RULE_config_entry = 11
    RULE_value = 12
    RULE_shape_expr = 13

    ruleNames =  [ "start", "model_block", "input_decl", "output_decl", 
                   "graph_block", "node_decl", "layer_expr", "param_list", 
                   "param", "edge_decl", "config_block", "config_entry", 
                   "value", "shape_expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    MODEL=10
    GRAPH=11
    CONFIG=12
    NODE=13
    EDGE=14
    INPUT=15
    OUTPUT=16
    TENSOR=17
    LABEL=18
    NONE=19
    BOOL_LITERAL=20
    ARROW=21
    FLOAT_LITERAL=22
    INT_LITERAL=23
    STRING=24
    ID=25
    WS=26
    NEWLINE=27
    LINE_COMMENT=28
    BLOCK_COMMENT=29

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def model_block(self):
            return self.getTypedRuleContext(NNGraphParser.Model_blockContext,0)


        def graph_block(self):
            return self.getTypedRuleContext(NNGraphParser.Graph_blockContext,0)


        def EOF(self):
            return self.getToken(NNGraphParser.EOF, 0)

        def config_block(self):
            return self.getTypedRuleContext(NNGraphParser.Config_blockContext,0)


        def getRuleIndex(self):
            return NNGraphParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = NNGraphParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.model_block()
            self.state = 29
            self.graph_block()
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 30
                self.config_block()


            self.state = 33
            self.match(NNGraphParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Model_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MODEL(self):
            return self.getToken(NNGraphParser.MODEL, 0)

        def ID(self):
            return self.getToken(NNGraphParser.ID, 0)

        def input_decl(self):
            return self.getTypedRuleContext(NNGraphParser.Input_declContext,0)


        def output_decl(self):
            return self.getTypedRuleContext(NNGraphParser.Output_declContext,0)


        def getRuleIndex(self):
            return NNGraphParser.RULE_model_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModel_block" ):
                listener.enterModel_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModel_block" ):
                listener.exitModel_block(self)




    def model_block(self):

        localctx = NNGraphParser.Model_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_model_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self.match(NNGraphParser.MODEL)
            self.state = 36
            self.match(NNGraphParser.ID)
            self.state = 37
            self.match(NNGraphParser.T__0)
            self.state = 38
            self.input_decl()
            self.state = 39
            self.output_decl()
            self.state = 40
            self.match(NNGraphParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Input_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INPUT(self):
            return self.getToken(NNGraphParser.INPUT, 0)

        def ID(self):
            return self.getToken(NNGraphParser.ID, 0)

        def TENSOR(self):
            return self.getToken(NNGraphParser.TENSOR, 0)

        def shape_expr(self):
            return self.getTypedRuleContext(NNGraphParser.Shape_exprContext,0)


        def getRuleIndex(self):
            return NNGraphParser.RULE_input_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInput_decl" ):
                listener.enterInput_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInput_decl" ):
                listener.exitInput_decl(self)




    def input_decl(self):

        localctx = NNGraphParser.Input_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_input_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(NNGraphParser.INPUT)
            self.state = 43
            self.match(NNGraphParser.ID)
            self.state = 44
            self.match(NNGraphParser.T__2)
            self.state = 45
            self.match(NNGraphParser.TENSOR)
            self.state = 46
            self.shape_expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Output_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OUTPUT(self):
            return self.getToken(NNGraphParser.OUTPUT, 0)

        def ID(self):
            return self.getToken(NNGraphParser.ID, 0)

        def getRuleIndex(self):
            return NNGraphParser.RULE_output_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOutput_decl" ):
                listener.enterOutput_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOutput_decl" ):
                listener.exitOutput_decl(self)




    def output_decl(self):

        localctx = NNGraphParser.Output_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_output_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(NNGraphParser.OUTPUT)
            self.state = 49
            self.match(NNGraphParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Graph_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GRAPH(self):
            return self.getToken(NNGraphParser.GRAPH, 0)

        def node_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NNGraphParser.Node_declContext)
            else:
                return self.getTypedRuleContext(NNGraphParser.Node_declContext,i)


        def edge_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NNGraphParser.Edge_declContext)
            else:
                return self.getTypedRuleContext(NNGraphParser.Edge_declContext,i)


        def getRuleIndex(self):
            return NNGraphParser.RULE_graph_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGraph_block" ):
                listener.enterGraph_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGraph_block" ):
                listener.exitGraph_block(self)




    def graph_block(self):

        localctx = NNGraphParser.Graph_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_graph_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(NNGraphParser.GRAPH)
            self.state = 52
            self.match(NNGraphParser.T__0)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13 or _la==14:
                self.state = 55
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [13]:
                    self.state = 53
                    self.node_decl()
                    pass
                elif token in [14]:
                    self.state = 54
                    self.edge_decl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 60
            self.match(NNGraphParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Node_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NODE(self):
            return self.getToken(NNGraphParser.NODE, 0)

        def ID(self):
            return self.getToken(NNGraphParser.ID, 0)

        def layer_expr(self):
            return self.getTypedRuleContext(NNGraphParser.Layer_exprContext,0)


        def getRuleIndex(self):
            return NNGraphParser.RULE_node_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNode_decl" ):
                listener.enterNode_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNode_decl" ):
                listener.exitNode_decl(self)




    def node_decl(self):

        localctx = NNGraphParser.Node_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_node_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(NNGraphParser.NODE)
            self.state = 63
            self.match(NNGraphParser.ID)
            self.state = 64
            self.match(NNGraphParser.T__2)
            self.state = 65
            self.layer_expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Layer_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(NNGraphParser.ID, 0)

        def param_list(self):
            return self.getTypedRuleContext(NNGraphParser.Param_listContext,0)


        def getRuleIndex(self):
            return NNGraphParser.RULE_layer_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLayer_expr" ):
                listener.enterLayer_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLayer_expr" ):
                listener.exitLayer_expr(self)




    def layer_expr(self):

        localctx = NNGraphParser.Layer_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_layer_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(NNGraphParser.ID)
            self.state = 68
            self.match(NNGraphParser.T__3)
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==25:
                self.state = 69
                self.param_list()


            self.state = 72
            self.match(NNGraphParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NNGraphParser.ParamContext)
            else:
                return self.getTypedRuleContext(NNGraphParser.ParamContext,i)


        def getRuleIndex(self):
            return NNGraphParser.RULE_param_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_list" ):
                listener.enterParam_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_list" ):
                listener.exitParam_list(self)




    def param_list(self):

        localctx = NNGraphParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_param_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.param()
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 75
                self.match(NNGraphParser.T__5)
                self.state = 76
                self.param()
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(NNGraphParser.ID, 0)

        def value(self):
            return self.getTypedRuleContext(NNGraphParser.ValueContext,0)


        def getRuleIndex(self):
            return NNGraphParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)




    def param(self):

        localctx = NNGraphParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(NNGraphParser.ID)
            self.state = 83
            self.match(NNGraphParser.T__6)
            self.state = 84
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Edge_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EDGE(self):
            return self.getToken(NNGraphParser.EDGE, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(NNGraphParser.ID)
            else:
                return self.getToken(NNGraphParser.ID, i)

        def ARROW(self):
            return self.getToken(NNGraphParser.ARROW, 0)

        def LABEL(self):
            return self.getToken(NNGraphParser.LABEL, 0)

        def STRING(self):
            return self.getToken(NNGraphParser.STRING, 0)

        def getRuleIndex(self):
            return NNGraphParser.RULE_edge_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEdge_decl" ):
                listener.enterEdge_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEdge_decl" ):
                listener.exitEdge_decl(self)




    def edge_decl(self):

        localctx = NNGraphParser.Edge_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_edge_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(NNGraphParser.EDGE)
            self.state = 87
            self.match(NNGraphParser.ID)
            self.state = 88
            self.match(NNGraphParser.ARROW)
            self.state = 89
            self.match(NNGraphParser.ID)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 90
                self.match(NNGraphParser.T__7)
                self.state = 91
                self.match(NNGraphParser.LABEL)
                self.state = 92
                self.match(NNGraphParser.T__6)
                self.state = 93
                self.match(NNGraphParser.STRING)
                self.state = 94
                self.match(NNGraphParser.T__8)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Config_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONFIG(self):
            return self.getToken(NNGraphParser.CONFIG, 0)

        def config_entry(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NNGraphParser.Config_entryContext)
            else:
                return self.getTypedRuleContext(NNGraphParser.Config_entryContext,i)


        def getRuleIndex(self):
            return NNGraphParser.RULE_config_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConfig_block" ):
                listener.enterConfig_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConfig_block" ):
                listener.exitConfig_block(self)




    def config_block(self):

        localctx = NNGraphParser.Config_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_config_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(NNGraphParser.CONFIG)
            self.state = 98
            self.match(NNGraphParser.T__0)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==25:
                self.state = 99
                self.config_entry()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 105
            self.match(NNGraphParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Config_entryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(NNGraphParser.ID, 0)

        def value(self):
            return self.getTypedRuleContext(NNGraphParser.ValueContext,0)


        def getRuleIndex(self):
            return NNGraphParser.RULE_config_entry

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConfig_entry" ):
                listener.enterConfig_entry(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConfig_entry" ):
                listener.exitConfig_entry(self)




    def config_entry(self):

        localctx = NNGraphParser.Config_entryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_config_entry)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(NNGraphParser.ID)
            self.state = 108
            self.match(NNGraphParser.T__6)
            self.state = 109
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT_LITERAL(self):
            return self.getToken(NNGraphParser.FLOAT_LITERAL, 0)

        def INT_LITERAL(self):
            return self.getToken(NNGraphParser.INT_LITERAL, 0)

        def BOOL_LITERAL(self):
            return self.getToken(NNGraphParser.BOOL_LITERAL, 0)

        def STRING(self):
            return self.getToken(NNGraphParser.STRING, 0)

        def NONE(self):
            return self.getToken(NNGraphParser.NONE, 0)

        def shape_expr(self):
            return self.getTypedRuleContext(NNGraphParser.Shape_exprContext,0)


        def getRuleIndex(self):
            return NNGraphParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = NNGraphParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_value)
        try:
            self.state = 117
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [22]:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.match(NNGraphParser.FLOAT_LITERAL)
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.match(NNGraphParser.INT_LITERAL)
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 3)
                self.state = 113
                self.match(NNGraphParser.BOOL_LITERAL)
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 4)
                self.state = 114
                self.match(NNGraphParser.STRING)
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 5)
                self.state = 115
                self.match(NNGraphParser.NONE)
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 6)
                self.state = 116
                self.shape_expr()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Shape_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_LITERAL(self, i:int=None):
            if i is None:
                return self.getTokens(NNGraphParser.INT_LITERAL)
            else:
                return self.getToken(NNGraphParser.INT_LITERAL, i)

        def getRuleIndex(self):
            return NNGraphParser.RULE_shape_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShape_expr" ):
                listener.enterShape_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShape_expr" ):
                listener.exitShape_expr(self)




    def shape_expr(self):

        localctx = NNGraphParser.Shape_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_shape_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(NNGraphParser.T__3)
            self.state = 120
            self.match(NNGraphParser.INT_LITERAL)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 121
                self.match(NNGraphParser.T__5)
                self.state = 122
                self.match(NNGraphParser.INT_LITERAL)
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 128
            self.match(NNGraphParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





